--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </tr> -->
 
       <tr><td>1/3/19</td><td><a href="./projects/proj1/ISS.html">ISS Live Tracker</a></td></tr>
-      <tr><td>1/4/19</td><td><a href="#">Single Layer Perceptron</a></td></tr>
+      <tr><td>1/4/19</td><td><a href="./projects/proj2/Perceptron.html">Single Layer Perceptron</a></td></tr>
       <tr><td>1/5/19</td><td><a href="#">Mercator Projection Map Plotting</a></td></tr>
       <tr><td>1/6/19</td><td><a href="#">Test6</a></td></tr>
       <tr><td>1/7/19</td><td><a href="#">Test7</a></td></tr>
