--- a/projects/proj3/MercatorPlot.html
+++ b/projects/proj3/MercatorPlot.html
@@ -10,23 +10,30 @@
     <script src="../../P5/p5.min.js"></script>
     <script src="../../P5/p5.dom.min.js"></script>
     <script src="../../P5/p5.sound.min.js"></script>
-    <script src="ISS.js"></script>
   </head>
   <body bgcolor="#1b1d26">
     <h1>Landon Ferguson</h1>
     <div class = "nav">
     <!-- <h3>(Projects)</h3> -->
+    <style>
+    img{
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 600px;
+    }
+    </style>
    </div>
    <ul>
      <li><a style="color: white;" href="../../index.html">Projects</a></li>
      <li><a style="color: white;" href="../../contact.html">Contact</a></li>
    </ul>
 
-     <div id="sketch-holder" style="text-align:center; padding-top:20px;">
+     <div>
      <!-- Sketch goes here -->
    </div>
-   <p id="descText">This javascript program tracks the International Space Station
-   using data from the NASA API<br> and plots it on a mercator projection map from MapBox. Visualized
-   in P5.js.
+   <img src="project3.jpg" alt="Perceptron_1_img" style="padding-top:20px; padding-bottom:20px;">
+   <p id="descText">Points plotted using an API's lattitude and longitude values. Programmed using JavaScript and P5.js</p>
+   <p id="descText">This example shows the locations of FRC competitions with color representing the week it takes place (1-6 green to purple)</p>
   </body>
 </html>
