update http requests

--- a/projects/proj1/ISS.html
+++ b/projects/proj1/ISS.html
@@ -6,7 +6,7 @@
     <title>Lando</title>
     <style> body {padding: 0; margin: 0;} </style>
     <link rel="stylesheet" type="text/css" href="../../index.css">.
-
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script src="../../P5/p5.min.js"></script>
     <script src="../../P5/p5.dom.min.js"></script>
     <script src="../../P5/p5.sound.min.js"></script>
