Added project titles and contact page

--- a/contact.html
+++ b/contact.html
@@ -16,5 +16,9 @@
      <li><a style="color: white;" href="index.html">Projects</a></li>
      <li><a style="color: white;" href="contact.html">(Contact)</a></li>
    </ul>
+
+   <div class="contact_info">
+     <h3>Email: <a href="mailto:landonljf@gmail.com">landonljf@gmail.com</a></h3>
+     <h3>Phone: <span class="numbers">727-255-0158</span></h3>
   </body>
 </html>
