--- a/index.html
+++ b/index.html
@@ -19,24 +19,25 @@
       <tbody>
 
       </tbody>
+      <tr>
+          <th>Last Updated</th>
+          <th style="">Name</th>
+      </tr>
 
-      <!-- <tr> HEADERS
-          <th>Date</th>
-          <th>Name</th>
-      </tr> -->
-
-      <tr><td>10/18/18</td><td><a href="./projects/proj1/ISS.html">ISS Live Tracker</a></td></tr>
-      <tr><td>10/14/18</td><td><a href="./projects/proj3/MercatorPlot.html">Mercator Projection Map Plotting</a></td></tr>
-      <tr><td>9/17/17</td><td><a href="./projects/proj2/Perceptron.html">Single Layer Perceptron</a></td></tr>
-      <tr><td>1/6/19</td><td><a href="#">Test6</a></td></tr>
-      <tr><td>1/7/19</td><td><a href="#">Test7</a></td></tr>
+      <!-- date id here meant to implement jquery for later -->
+      <tr><td id="date">08/21/19</td><td><a href="#">DataFX</a></td></tr>
+      <tr><td id="date">10/18/18</td><td><a href="./projects/proj1/ISS.html">ISS Live Tracker</a></td></tr>
+      <tr><td id="date">10/14/18</td><td><a href="./projects/proj3/MercatorPlot.html">Mercator Projection Map Plotting</a></td></tr>
+      <tr><td id="date">09/17/17</td><td><a href="./projects/proj2/Perceptron.html">Single Layer Perceptron</a></td></tr>
+      <tr><td id="date">12/04/17</td><td><a href="./projects/proj4/GluttonousGreg.html">Gluttonous Greg</a></td></tr>
+      <!-- <tr><td>1/7/19</td><td><a href="#">Test7</a></td></tr>
       <tr><td>1/8/19</td><td><a href="#">Test8</a></td></tr>
       <tr><td>1/9/19</td><td><a href="#">Test9</a></td></tr>
       <tr><td>1/10/19</td><td><a href="#">Test10</a></td></tr>
       <tr><td>1/11/19</td><td><a href="#">Test11</a></td></tr>
       <tr><td>1/12/19</td><td><a href="#">Test12</a></td></tr>
       <tr><td>1/13/19</td><td><a href="#">Test13</a></td></tr>
-      <tr><td>1/14/19</td><td><a href="#">Test14</a></td></tr>
+      <tr><td>1/14/19</td><td><a href="#">Test14</a></td></tr> -->
 
       </table>
 
