beautify table headers

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,6 @@
 
    <div class="contact_info">
      <h3>Email: <a href="mailto:landonljf@gmail.com">landonljf@gmail.com</a></h3>
-     <h3>Phone: <span class="numbers">727-255-0158</span></h3>
+     <h3 style="padding-right: 74px;">Phone: <span class="numbers">727-255-0158</span></h3>
   </body>
 </html>
