--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
       </tbody>
       <tr>
-          <th>Last Updated</th>
-          <th style="">Name</th>
+          <th align="right" style="padding-bottom: 10px">Last Updated</th>
+          <th align="left" style="padding-left: 40px; padding-bottom: 10px">Name</th>
       </tr>
 
       <!-- date id here meant to implement jquery for later -->
-      <tr><td id="date">08/21/19</td><td><a href="#">DataFX</a></td></tr>
-      <tr><td id="date">10/18/18</td><td><a href="./projects/proj1/ISS.html">ISS Live Tracker</a></td></tr>
-      <tr><td id="date">10/14/18</td><td><a href="./projects/proj3/MercatorPlot.html">Mercator Projection Map Plotting</a></td></tr>
-      <tr><td id="date">09/17/17</td><td><a href="./projects/proj2/Perceptron.html">Single Layer Perceptron</a></td></tr>
-      <tr><td id="date">12/04/17</td><td><a href="./projects/proj4/GluttonousGreg.html">Gluttonous Greg</a></td></tr>
+      <tr><td id="date">08/21/19</td><td class="nameLabel"><a href="#">DataFX</a></td></tr>
+      <tr><td id="date">10/18/18</td><td class="nameLabel"><a href="./projects/proj1/ISS.html">ISS Live Tracker</a></td></tr>
+      <tr><td id="date">10/14/18</td><td class="nameLabel"><a href="./projects/proj3/MercatorPlot.html">Mercator Projection Map Plotting</a></td></tr>
+      <tr><td id="date">09/17/17</td><td class="nameLabel"><a href="./projects/proj2/Perceptron.html">Single Layer Perceptron</a></td></tr>
+      <tr><td id="date">12/04/17</td><td class="nameLabel"><a href="./projects/proj4/GluttonousGreg.html">Gluttonous Greg</a></td></tr>
       <!-- <tr><td>1/7/19</td><td><a href="#">Test7</a></td></tr>
       <tr><td>1/8/19</td><td><a href="#">Test8</a></td></tr>
       <tr><td>1/9/19</td><td><a href="#">Test9</a></td></tr>
