--- a/projects/proj2/Perceptron.html
+++ b/projects/proj2/Perceptron.html
@@ -37,6 +37,7 @@
    <img src="perceptronExample.png" alt="Perceptron_2_img" style="padding-top:30px; padding-bottom:30px;">
    <p id="descText">This perceptron takes 2 inputs and tunes them using weights before passing them into the neuron.<br> Which then uses an activation function (sin in this case) to determine which side of the line a point <br>is on and outputs the data</p>
 
-   <img src="perceptron_Thumb.gif" alt="Perceptron_3_img" style="padding-top:50px; padding-bottom:100px; width:600px;">
+   <img src="perceptron_Thumb.gif" alt="Perceptron_3_img" style="padding-top:50px; padding-bottom:20px; width:600px;">
+   <h2 style="padding-bottom:20px;"><a href="https://github.com/LandonFerg/ML-Perceptron">View the code</a></h2>
   </body>
 </html>
