--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
      <li><a style="color: white;" href="index.html">(Projects)</a></li>
      <li><a style="color: white;" href="contact.html">Contact</a></li>
    </ul>
+   <div style="margin-left:auto;margin-right:auto;">
     <table border = "0" align="center" style= "color:white">
       <tbody>
 
       </tbody>
-      <tr>
+      <tr style="white-space: nowrap;">
           <th align="right" style="padding-bottom: 10px">Last Updated</th>
           <th align="left" style="padding-left: 40px; padding-bottom: 10px">Name</th>
       </tr>
@@ -40,6 +41,7 @@
       <tr><td>1/14/19</td><td><a href="#">Test14</a></td></tr> -->
 
       </table>
+    </div>
 
   <h4>Check out my <a href="https://github.com/LandonFerg">GitHub</a></h4>
   </body>
