added responsive image css

--- a/projects/DataFX/Perceptron.html
+++ b/projects/DataFX/Perceptron.html
@@ -20,7 +20,7 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
-      width: 600px;
+      width: 400px;
     }
     </style>
    </div>
@@ -29,14 +29,15 @@
      <li><a style="color: white;" href="../../contact.html">Contact</a></li>
    </ul>
 
-   <div>
+     <div>
      <!-- Sketch goes here -->
    </div>
-   <div class = "contentHolder">
-      <img src="gg.png" alt="GluttonousGreg_1_img" width="800" height="600" class="responsiveImg" style="padding-top:30px;">
-   <!-- <img src="project3.jpg" alt="Perceptron_1_img" style="padding-top:20px; padding-bottom:20px;">
- --><p id="descText">Gluttonous Greg was my 2nd attempt at the 48 hour game jam, <a href="https://ldjam.com/">Ludum Dare</a>.</p>
-  </div>
-   <!--<p id="descText">This example shows the locations of FRC competitions with color representing the week it takes place (1-6 green to purple)</p> -->
+   <img src="project1.jpg" alt="Perceptron_1_img" style="padding-top:30px;">
+   <p id="descText">A machine learned Perceptron using basic gradient descent programmed in Unity3d with C#.</p>
+   <img src="perceptronExample.png" alt="Perceptron_2_img" style="padding-top:30px; padding-bottom:30px;">
+   <p id="descText">This perceptron takes 2 inputs and tunes them using weights before passing them into the neuron.<br> Which then uses an activation function (sin in this case) to determine which side of the line a point <br>is on and outputs the data</p>
+
+   <img src="perceptron_Thumb.gif" alt="Perceptron_3_img" style="padding-top:50px; padding-bottom:20px; width:600px;">
+   <h2 style="padding-bottom:20px;"><a href="https://github.com/LandonFerg/ML-Perceptron">View the code</a></h2>
   </body>
 </html>
