--- a/projects/proj2/Perceptron.html
+++ b/projects/proj2/Perceptron.html
@@ -38,6 +38,6 @@
    <p id="descText">This perceptron takes 2 inputs and tunes them using weights before passing them into the neuron.<br> Which then uses an activation function (sin in this case) to determine which side of the line a point <br>is on and outputs the data</p>
 
    <img src="perceptron_Thumb.gif" alt="Perceptron_3_img" style="padding-top:50px; padding-bottom:20px; width:600px;">
-   <h2 style="padding-bottom:20px;"><a href="https://github.com/LandonFerg/ML-Perceptron">View the code</a></h2>
+   <h2 style="padding-bottom:20px;"><a href="https://github.com/LandonFerg/ML-Perceptron">View the code</a></h2> <!-- view code link -->
   </body>
 </html>
