--- a/projects/proj4/GluttonousGreg.html
+++ b/projects/proj4/GluttonousGreg.html
@@ -29,13 +29,14 @@
      <li><a style="color: white;" href="../../contact.html">Contact</a></li>
    </ul>
 
-   <div>
-     <!-- Sketch goes here -->
-   </div>
    <div class = "contentHolder">
-      <img src="gg.png" alt="GluttonousGreg_1_img" width="800" height="600" class="responsiveImg" style="padding-top:30px;">
-   <!-- <img src="project3.jpg" alt="Perceptron_1_img" style="padding-top:20px; padding-bottom:20px;">
- --><p id="descText">Gluttonous Greg was my 2nd attempt at the 48 hour game jam, <a href="https://ldjam.com/">Ludum Dare</a>.</p>
+     <img src="gg.png" alt="GluttonousGreg_1_img" width="800" height="600" class="responsiveImg" style="padding-top:30px;">
+     <p id="descText">Gluttonous Greg was my 2nd attempt at the 48 hour game jam, <a href="https://ldjam.com/">Ludum Dare</a>.</p>
+    <video class="responsiveImg" src="begin-demo.webm" style="position: relative; padding-top: 30px;" width = "600px" autoplay loop muted playsinline></video>
+    <p id="descText">The main goal of the game is to collect as many healthy food items as possible while avoiding the unhealthy burgers as the theme was "The more you have, the worse it is".</p>
+    <video class="responsiveImg" src="fast-demo.webm" style="position: relative; padding-top: 30px;" width = "600px" autoplay loop muted playsinline></video>
+    <p id="descText" style="padding-bottom: 50px;">My main focus this jam was to write clean and well commented code while still having enough time to program the game mechanics. I accomplished this by making it straightforward to program the mechanics at the beginning by making it a very simple design.</p>
+    <h2 style="padding-bottom:30px;"><a href="https://github.com/LandonFerg/ML-Perceptron">View the code</a></h2> <!-- view code link -->
   </div>
    <!--<p id="descText">This example shows the locations of FRC competitions with color representing the week it takes place (1-6 green to purple)</p> -->
   </body>
