--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </tr>
 
       <!-- date id here meant to implement jquery for later -->
-      <tr><td id="date">08/21/19</td><td class="nameLabel"><a href="#">DataFX</a></td></tr>
+      <tr><td id="date">08/21/19</td><td class="nameLabel"><a href="./projects/proj5/DataFX.html">DataFX</a></td></tr>
       <tr><td id="date">10/18/18</td><td class="nameLabel"><a href="./projects/proj1/ISS.html">ISS Live Tracker</a></td></tr>
       <tr><td id="date">10/14/18</td><td class="nameLabel"><a href="./projects/proj3/MercatorPlot.html">Mercator Projection Map Plotting</a></td></tr>
       <tr><td id="date">12/04/17</td><td class="nameLabel"><a href="./projects/proj4/GluttonousGreg.html">Gluttonous Greg</a></td></tr>
