added mp4s for nonsupported webm browsers

--- a/projects/proj4/GluttonousGreg.html
+++ b/projects/proj4/GluttonousGreg.html
@@ -32,9 +32,15 @@
    <div class = "contentHolder">
      <img src="gg.png" alt="GluttonousGreg_1_img" width="800" height="600" class="responsiveImg" style="padding-top:30px;">
      <p id="descText">Gluttonous Greg was my 2nd attempt at the 48 hour game jam, <a href="https://ldjam.com/">Ludum Dare</a>.</p>
-    <video class="responsiveImg" src="begin-demo.webm" style="position: relative; padding-top: 30px;" width = "600px" autoplay loop muted playsinline></video>
+    <video class="responsiveImg" style="position: relative; padding-top: 30px;" width = "600px" autoplay loop muted playsinline>
+      <source src="begin-demo.webm" type="video/webm">
+      <source src="begin-demo.mp4" type="video/mp4">
+    </video>
     <p id="descText">The main goal of the game is to collect as many healthy food items as possible while avoiding the unhealthy burgers as the theme was "The more you have, the worse it is".</p>
-    <video class="responsiveImg" src="fast-demo.webm" style="position: relative; padding-top: 30px;" width = "600px" autoplay loop muted playsinline></video>
+    <video class="responsiveImg" style="position: relative; padding-top: 30px;" width = "600px" autoplay loop muted playsinline>
+      <source src="fast-demo.webm" type="video/webm">
+      <source src="fast-demo.mp4" type="video/mp4">
+    </video>
     <p id="descText" style="padding-bottom: 50px;">My main focus this jam was to write clean and well commented code while still having enough time to program the game mechanics. I accomplished this by making it straightforward to program the mechanics at the beginning by making it a very simple design.</p>
     <h2 style="padding-bottom:30px;"><a href="https://github.com/LandonFerg/Gluttonous-Greg">View the code</a></h2> <!-- view code link -->
   </div>
