added animations & Data-FX page

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lando</title>
     <style> body {padding: 0; margin: 0;} </style>
-    <link rel="stylesheet" type="text/css" href="index.css">.
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body bgcolor="#1b1d26">
-    <h1>Landon Ferguson</h1>
+    <h1 style="padding-top: 18px;">Landon Ferguson</h1>
     <div class = "nav">
     <!-- <h3>(Projects)</h3> -->
    </div>
@@ -18,7 +19,8 @@
    </ul>
 
    <div class="contact_info">
-     <h3>Email: <a href="mailto:landonljf@gmail.com">landonljf@gmail.com</a></h3>
-     <h3 style="padding-right: 74px;">Phone: <span class="numbers">727-255-0158</span></h3>
+     <h3 class ="animated fadeInRight 150ms">Email: <a href="mailto:landonljf@gmail.com">landonljf@gmail.com</a></h3>
+     <h3 class ="animated fadeInRight 150ms" style="padding-right: 74px;">Phone: <span class="numbers">727-255-0158</span></h3>
+   </div>
   </body>
 </html>
