--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lando</title>
     <style> body {padding: 0; margin: 0;} </style>
-    <link rel="stylesheet" type="text/css" href="index.css">.
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   </head>
   <body bgcolor="#1b1d26">
-    <h1>Landon Ferguson</h1>
+    <h1 style="padding-top: 18px;">Landon Ferguson</h1>
 
    <!-- Nav -->
    <ul>
      <li><a style="color: white;" href="index.html">(Projects)</a></li>
      <li><a style="color: white;" href="contact.html">Contact</a></li>
    </ul>
-   <div style="margin-left:auto;margin-right:auto;">
+   <div style="margin-left:auto;margin-right:auto;" class="animated fadeInLeft 150ms">
     <table border = "0" align="center" style= "color:white">
       <tbody>
 
