--- a/projects/proj5/DataFX.html
+++ b/projects/proj5/DataFX.html
@@ -20,7 +20,7 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
-      width: 400px;
+      width: 600px;
     }
     </style>
    </div>
@@ -32,8 +32,13 @@
      <div>
      <!-- Sketch goes here -->
    </div>
+
+   <p id="descp">Data-FX is a WIP plugin for blender3d which allows the user to load data from a CSV file and plot the data in 3D space.
+     The benefits of using blender is the amount of customization you can do with the generation and visualization.</p>
+   <p id="descText"></p>
+   <img src="scatter-example.png" alt="Scatter_1_img" style="padding-top:30px;">
+   <p id="descText">Example generating a scatterplot from CSV data.</p>
    <!-- <img src="project1.jpg" alt="Perceptron_1_img" style="padding-top:30px;"> -->
-   <p id="descText">WIP Page will update tomorrow <3</p>
    <h2 style="padding-bottom:20px;"><a href="https://github.com/LandonFerg/Data-FX">View the code</a></h2>
   </body>
 </html>
