--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   </head>
   <body bgcolor="#1b1d26">
-    <h1 style="padding-top: 18px;">Landon Ferguson</h1>
+    <h1 style="padding-top: 18px;" class = "">Landon Ferguson</h1>
 
    <!-- Nav -->
    <ul>
