--- a/contact.html
+++ b/contact.html
@@ -22,5 +22,7 @@
      <h3 class ="animated fadeInRight 150ms">Email: <a href="mailto:landonljf@gmail.com">landonljf@gmail.com</a></h3>
      <h3 class ="animated fadeInRight 150ms" style="padding-right: 74px;">Phone: <span class="numbers">727-255-0158</span></h3>
    </div>
+
+   <h4>Check out my <a href="https://github.com/LandonFerg">GitHub</a></h4>
   </body>
 </html>
