--- a/projects/proj5/DataFX.html
+++ b/projects/proj5/DataFX.html
@@ -34,7 +34,7 @@
    </div>
 
    <p id="descp">Data-FX is a WIP plugin for blender3d which allows the user to load data from a CSV file and plot the data in 3D space.
-     The benefits of using blender is the amount of customization you can do with the generation and visualization.</p>
+     The benefits of using Blender include the amount of customization. The generation and visualization of the data is fully user defined.</p>
    <p id="descText"></p>
    <img src="scatter-example.png" alt="Scatter_1_img" style="padding-top:30px;">
    <p id="descText">Example generating a scatterplot from CSV data.</p>
