--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,15 @@
      <li><a style="color: white;" href="contact.html">(Contact)</a></li>
    </ul>
 
+   <style>
+   html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+    }
+   </style>
+
    <div class="contact_info">
      <h3 class ="animated fadeInRight 150ms">Email: <a href="mailto:landonljf@gmail.com">landonljf@gmail.com</a></h3>
-     <h3 class ="animated fadeInRight 150ms" style="padding-right: 74px;">Phone: <span class="numbers">727-255-0158</span></h3>
    </div>
 
    <h4>Check out my <a href="https://github.com/LandonFerg">GitHub</a></h4>
