--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 
       </tbody>
       <tr style="white-space: nowrap;">
-          <th align="right" style="padding-bottom: 10px">Last Updated</th>
-          <th align="left" style="padding-left: 40px; padding-bottom: 10px">Name</th>
+          <th align="right" style="padding-bottom: 5px">Last Updated</th>
+          <th align="left" style="padding-left: 40px; padding-bottom: 5px">Name</th>
       </tr>
 
       <!-- date id here meant to implement jquery for later -->
+      <tr><td style = "padding:top 10px;"></td></tr>
       <tr><td id="date">08/21/19</td><td class="nameLabel"><a href="./projects/proj5/DataFX.html">DataFX</a></td></tr>
       <tr><td id="date">10/18/18</td><td class="nameLabel"><a href="./projects/proj1/ISS.html">ISS Live Tracker</a></td></tr>
       <tr><td id="date">10/14/18</td><td class="nameLabel"><a href="./projects/proj3/MercatorPlot.html">Mercator Projection Map Plotting</a></td></tr>
