auto grabs latest project repo date

--- a/projects/proj3/MercatorPlot.html
+++ b/projects/proj3/MercatorPlot.html
@@ -34,6 +34,6 @@
    </div>
    <img src="project3.jpg" alt="Perceptron_1_img" style="padding-top:20px; padding-bottom:20px;">
    <p id="descText">Points plotted using an API's lattitude and longitude values. Programmed using JavaScript and P5.js</p>
-   <p id="descText">This example shows the locations of FRC competitions with color representing the week it takes place (1-6 green to purple)</p>
+   <p id="descText">This example shows the locations of <a href = https://www.firstinspires.org/robotics/frc>FRC</a> competitions with color representing the week it takes place (1-6 green to purple)</p>
   </body>
 </html>
