--- a/projects/proj5/DataFX.html
+++ b/projects/proj5/DataFX.html
@@ -39,6 +39,6 @@
    <img src="scatter-example.png" alt="Scatter_1_img" style="padding-top:30px;">
    <p id="descText">Example generating a scatterplot from CSV data.</p>
    <!-- <img src="project1.jpg" alt="Perceptron_1_img" style="padding-top:30px;"> -->
-   <h2 style="padding-bottom:20px;"><a href="https://github.com/LandonFerg/Data-FX">View the code</a></h2>
+   <h2 style="padding-bottom:20px;"><a href="https://github.com/LandonFerg/Data-FX">View on Github</a></h2>
   </body>
 </html>
