--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
       <!-- date id here meant to implement jquery for later -->
       <tr><td style = "padding:top 10px;"></td></tr>
-      <tr><td id="date">08/21/19</td><td class="nameLabel"><a href="./projects/proj5/DataFX.html">DataFX</a></td></tr>
-      <tr><td id="date">10/18/18</td><td class="nameLabel"><a href="./projects/proj1/ISS.html">ISS Live Tracker</a></td></tr>
-      <tr><td id="date">10/14/18</td><td class="nameLabel"><a href="./projects/proj3/MercatorPlot.html">Mercator Projection Map Plotting</a></td></tr>
-      <tr><td id="date">12/04/17</td><td class="nameLabel"><a href="./projects/proj4/GluttonousGreg.html">Gluttonous Greg</a></td></tr>
-      <tr><td id="date">09/17/17</td><td class="nameLabel"><a href="./projects/proj2/Perceptron.html">Single Layer Perceptron</a></td></tr>
+      <tr><td class="date">02/23/22</td><td class="nameLabel"><a href="./projects/proj5/DataFX.html">Data-FX</a></td></tr>
+      <tr><td class="date">10/18/18</td><td class="nameLabel"><a href="./projects/proj1/ISS.html">ISS Live Tracker</a></td></tr>
+      <tr><td class="date">10/14/18</td><td class="nameLabel"><a href="./projects/proj3/MercatorPlot.html">Mercator Projection Map Plotting</a></td></tr>
+      <tr><td class="date">12/04/17</td><td class="nameLabel"><a href="./projects/proj4/GluttonousGreg.html">Gluttonous-Greg</a></td></tr>
+      <tr><td class="date">09/17/17</td><td class="nameLabel"><a href="./projects/proj2/Perceptron.html">Single Layer Perceptron</a></td></tr>
       <!-- <tr><td>1/7/19</td><td><a href="#">Test7</a></td></tr>
       <tr><td>1/8/19</td><td><a href="#">Test8</a></td></tr>
       <tr><td>1/9/19</td><td><a href="#">Test9</a></td></tr>
@@ -43,6 +43,7 @@
       <tr><td>1/14/19</td><td><a href="#">Test14</a></td></tr> -->
 
       </table>
+      <script src="updateprojects.js"></script>
     </div>
 
   <h4>Check out my <a href="https://github.com/LandonFerg">GitHub</a></h4>
