--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
     <!-- <h3>(Projects)</h3> -->
    </div>
    <ul>
-     <li><a style="color: white;" href="index.html">Projects</a></li>
-     <li><a style="color: white;" href="contact.html">(Contact)</a></li>
+     <li><a style="color: white;" href="index">Projects</a></li>
+     <li><a style="color: white;" href="contact">(Contact)</a></li>
    </ul>
 
    <style>
