--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
    <!-- Nav -->
    <ul>
-     <li><a style="color: white;" href="index.html">(Projects)</a></li>
-     <li><a style="color: white;" href="contact.html">Contact</a></li>
+     <li><a style="color: white;" href="index">(Projects)</a></li>
+     <li><a style="color: white;" href="contact">Contact</a></li>
    </ul>
    <div style="margin-left:auto;margin-right:auto;" class="animated fadeInLeft 150ms">
     <table border = "0" align="center" style= "color:white">
@@ -28,11 +28,11 @@
 
       <!-- date id here meant to implement jquery for later -->
       <tr><td style = "padding:top 10px;"></td></tr>
-      <tr><td class="date">02/23/22</td><td class="nameLabel"><a href="./projects/proj5/DataFX.html">Data-FX</a></td></tr>
-      <tr><td class="date">10/18/18</td><td class="nameLabel"><a href="./projects/proj1/ISS.html">ISS Live Tracker</a></td></tr>
-      <tr><td class="date">10/14/18</td><td class="nameLabel"><a href="./projects/proj3/MercatorPlot.html">Mercator Projection Map Plotting</a></td></tr>
-      <tr><td class="date">12/04/17</td><td class="nameLabel"><a href="./projects/proj4/GluttonousGreg.html">Gluttonous-Greg</a></td></tr>
-      <tr><td class="date">09/17/17</td><td class="nameLabel"><a href="./projects/proj2/Perceptron.html">Single Layer Perceptron</a></td></tr>
+      <tr><td class="date">02/23/22</td><td class="nameLabel"><a href="./projects/proj5/DataFX">Data-FX</a></td></tr>
+      <tr><td class="date">10/18/18</td><td class="nameLabel"><a href="./projects/proj1/ISS">ISS Live Tracker</a></td></tr>
+      <tr><td class="date">10/14/18</td><td class="nameLabel"><a href="./projects/proj3/MercatorPlot">Mercator Projection Map Plotting</a></td></tr>
+      <tr><td class="date">12/04/17</td><td class="nameLabel"><a href="./projects/proj4/GluttonousGreg">Gluttonous-Greg</a></td></tr>
+      <tr><td class="date">09/17/17</td><td class="nameLabel"><a href="./projects/proj2/Perceptron">Single Layer Perceptron</a></td></tr>
       <!-- <tr><td>1/7/19</td><td><a href="#">Test7</a></td></tr>
       <tr><td>1/8/19</td><td><a href="#">Test8</a></td></tr>
       <tr><td>1/9/19</td><td><a href="#">Test9</a></td></tr>
