--- a/projects/proj1/ISS.html
+++ b/projects/proj1/ISS.html
@@ -18,8 +18,8 @@
     <!-- <h3>(Projects)</h3> -->
    </div>
    <ul>
-     <li><a style="color: white;" href="../../index.html">Projects</a></li>
-     <li><a style="color: white;" href="../../contact.html">Contact</a></li>
+     <li><a style="color: white;" href="../../index">Projects</a></li>
+     <li><a style="color: white;" href="../../contact">Contact</a></li>
    </ul>
 
      <div id="sketch-holder" style="text-align:center; padding-top:20px;">
