--- a/projects/proj5/DataFX.html
+++ b/projects/proj5/DataFX.html
@@ -25,8 +25,8 @@
     </style>
    </div>
    <ul>
-     <li><a style="color: white;" href="../../index.html">Projects</a></li>
-     <li><a style="color: white;" href="../../contact.html">Contact</a></li>
+     <li><a style="color: white;" href="../../index">Projects</a></li>
+     <li><a style="color: white;" href="../../contact">Contact</a></li>
    </ul>
 
      <div>
